@@ -1,4 +1,4 @@
-@set UPDATED 29 January 2006
-@set UPDATED-MONTH January 2006
-@set EDITION 2.1.18p1
-@set VERSION 2.1.18p1
+@set UPDATED 18 February 2006
+@set UPDATED-MONTH February 2006
+@set EDITION 2.1.19
+@set VERSION 2.1.19
