@@ -1,4 +1,4 @@
 @set UPDATED 6 August 2005
 @set UPDATED-MONTH August 2005
-@set EDITION 2.1.18p1
-@set VERSION 2.1.18p1
+@set EDITION 2.1.19
+@set VERSION 2.1.19
