@@ -254,9 +254,11 @@ extern struct Item *VACLBUILD;
 extern struct Item *VFILTERBUILD;
 extern struct Item *VSTRATEGYBUILD;
 
+
 extern struct Item *VMOUNTLIST;
 extern struct Item *VHEAP;      /* Points to the base of the attribute heap */
 extern struct Item *VNEGHEAP;
+extern struct Item *ABORTHEAP;
 
 /* For packages: */
 extern struct Package *VPKG;
